--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="rangkasurat">
 	<table class="tablekop" width="120%">
 		<tr>
-			<td> <img src="Logo-Provinsi-Kalimantan-Tengah.png" width="15%"></td>
+			<td> <img src="Logo-Provinsi-Kalimantan-Tengah.png" width="120px"></td>
 			<td class="tengah">
 				<h2>PEMERINTAH DAERAH PROVINSI KALIMANTAN TENGAH</h2>
 				<h2>DINAS PENDIDIKAN</h2>
